<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:defaultValue="@bool/pref_show_bass_default"
        android:key="@string/pref_shared_keyshow_bass"
        android:summaryOff="@string/hidden"
        android:summaryOn="@string/shown"
        android:title="@string/Show_bass">

    </CheckBoxPreference>
    <CheckBoxPreference
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:defaultValue="@bool/pref_show_mid_default"
        android:key="@string/pref_ShowMid_key"
        android:summaryOff="@string/hidden"
        android:summaryOn="@string/shown"
        android:title="@string/ShowMid">

    </CheckBoxPreference>
    <CheckBoxPreference
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:defaultValue="@bool/pref_show_treble_default"
        android:key="@string/pref_ShowTreble_key"
        android:summaryOff="@string/hidden"
        android:summaryOn="@string/shown"
        android:title="@string/pref_Show_Treble_lable">

    </CheckBoxPreference>

    <ListPreference
        android:defaultValue="@string/pref_color_red_value"
        android:entries="@array/pref_color_option_lable"
        android:entryValues="@array/pref_color_option_value"
        android:key="@string/pref_color_key"
        android:title="@string/shape_color_lable">

    </ListPreference>
    <EditTextPreference
        android:defaultValue="@string/pref_size_default"
        android:key="@string/pref_size_key"
        android:title="@string/pref_size_lable" />
</PreferenceScreen>